--- a/my-react-ts-app/src/components/Navbar/style.scss
+++ b/my-react-ts-app/src/components/Navbar/style.scss
@@ -3,7 +3,7 @@
   padding: 30px;
   display: flex;
   justify-content: space-between;
-  border: 1px solid red;
+  box-shadow: 0 3px 5px -1px rgb(67, 67, 67);
 }
 
 .navbar__items {
@@ -14,7 +14,9 @@
 }
 
 .navbar__items-item {
-  font-family: 'Ubuntu', sans-serif;
+  align-self: center;
+
   font-size: 20px;
   font-weight: 500;
+  cursor: pointer;
 }
