--- a/my-react-ts-app/src/components/SearchBar/style.scss
+++ b/my-react-ts-app/src/components/SearchBar/style.scss
@@ -1,3 +1,53 @@
+.searchbar {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.searchbar__block {
+  width: 300px;
+  height: 35px;
+  padding: 0 10px;
+  display: flex;
+  align-items: center;
+  gap: 7px;
+  border: 1px solid gray;
+  border-radius: 10px;
+}
+
+.searchbar__block-input {
+  width: 90%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+
+  font-size: 16px;
+  font-weight: 500;
+
+  outline: none;
+  border: none;
+  border-radius: 10px;
+}
+
+.searchbar__button {
+  width: 80px;
+  height: 35px;
+  color: whitesmoke;
+  background-color: rgb(67, 67, 67);
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.searchbar__button:active {
+  box-shadow: inset 5px 5px 10px -3px black;
+  transform: translateY(3px);
+}
+
 .searchicon {
-  position: absolute;
+  width: 20px;
+  height: 20px;
+  opacity: .7;
 }
