--- a/my-react-ts-app/src/components/Card/style.scss
+++ b/my-react-ts-app/src/components/Card/style.scss
@@ -2,16 +2,16 @@
   width: 250px;
   display: flex;
   flex-direction: column;
-  gap: 5px;
-  box-shadow: 5px 5px 5px gray;
+  box-shadow: 0 1px 9px 2px gray;
 }
 
 .card__image {
   width: 100%;
+  height: 50%;
 }
 
 .card__text-block {
-  height: 25%;
+  height: 40%;
   padding: 7px;
   display: flex;
   flex-direction: column;
@@ -28,6 +28,7 @@
   padding: 3px 7px;
   display: flex;
   justify-content: space-between;
+  border-top: 1px solid grey;
 }
 
 .card__icons-block-inner {
